# toll-booth-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  llms-full.txt  llms.txt
.github/workflows/: ci.yml
src/: engine.rs  free_tier.rs  geo_fence.rs  lib.rs  macaroon.rs  types.rs
src/backends/: mod.rs  phoenixd.rs  traits.rs
src/middleware/: axum.rs  mod.rs
src/rails/: l402.rs  mod.rs  traits.rs
src/storage/: memory.rs  mod.rs  sqlite.rs  traits.rs
