[package]
name = "toll-booth"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "L402 payment middleware for Rust. Gates any HTTP API behind Lightning payments."
license = "MIT"
repository = "https://github.com/forgesworn/toll-booth-rs"
homepage = "https://github.com/forgesworn/toll-booth-rs"
documentation = "https://docs.rs/toll-booth"
readme = "README.md"
keywords = ["l402", "lightning", "paywall", "middleware", "payments"]
categories = ["web-programming", "cryptography", "authentication"]

[features]
default = ["l402", "sqlite", "axum-middleware"]
l402 = []
sqlite = ["dep:rusqlite"]
axum-middleware = ["dep:axum", "dep:tower", "dep:http", "dep:pin-project-lite"]
phoenixd = ["dep:reqwest"]

[dependencies]
# Core crypto
hmac = "0.12"
sha2 = "0.10"
subtle = "2.6"
rand = "0.8"
hex = "0.4"
base64 = "0.22"

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async
async-trait = "0.1"

# Regex (for tier/IP validation)
regex = "1"
once_cell = "1"

# Error handling
thiserror = "2"

# Optional: SQLite storage
rusqlite = { version = "0.34", features = ["bundled"], optional = true }

# Optional: Phoenixd backend
reqwest = { version = "0.12", features = ["json"], optional = true }

# Optional: Axum middleware
axum = { version = "0.8", optional = true }
tower = { version = "0.5", features = ["util"], optional = true }
http = { version = "1", optional = true }
pin-project-lite = { version = "0.2", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
